# keenetica

./: .gitignore  README.md  logger.py  main.py  pyproject.toml  settings.py  technical_requirements.md
data_processing/: __init__.py  median_filter.py  moving_average.py  utils.py
gui/: __init__.py  gui.py
server/: requests_handler.py  tcp_server.py
tests/: test_it.py
tests/data_processing/: test_median_filter.py  test_moving_average.py
